--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
         const audio = new Audio()
         const vscode = acquireVsCodeApi()
         const postMessage = (type, body) => vscode.postMessage({type, body})
+        const AutoSlowDown = () => {
+            let intervalHandler
+            return {
+                on: () => {
+                    if (audio.paused) audio.play()
+                    intervalHandler = setInterval(() => {
+                        if (audio.paused || !audio.src)  return
+                        if (audio.playbackRate <= 0.5) {
+                            audio.pause()
+                        } 
+                        else {
+                            audio.playbackRate *= 0.9
+                            postMessage('echo', 'I\'m low ' + audio.playbackRate)
+                        }
+                    }, 5000)
+                },
+                off:() => {
+                    clearInterval(intervalHandler)
+                    audio.playbackRate = 1.0
+                }
+            }
+        }
         let playing = {}
-
+        const autoSlowDown = AutoSlowDown()
         audio.addEventListener('play', () => {
             postMessage('event', {name: 'play'})
         }, false)
@@ -35,6 +57,17 @@
             }
             else if(message.command === 'pause'){
                 if(!audio.paused) audio.pause()
+            }
+            else if (message.command === 'speedup') {
+                speed = audio.playbackRate
+                if (audio.paused) audio.play()
+                if (speed < 2.0) audio.playbackRate += 0.1
+            }
+            else if (message.command === 'typeOn'){
+                autoSlowDown.on()
+            }
+            else if (message.command === 'typeOff'){
+                autoSlowDown.off()
             }
         })
     </script>
