Add volume adjust repeatedly & show current volume when it changed.

--- a/index.html
+++ b/index.html
@@ -80,9 +80,15 @@
 			}
 			else if (command === 'volume_up') {
 				audio.volume += 0.2
+				audio.volume = Math.min(1, audio.volume)
 			}
 			else if (command === 'volume_down') {
 				audio.volume -= 0.2
+				audio.volume = Math.max(0, audio.volume)
+			}
+			else if (command === 'volume_change_repeat') {
+				if(audio.volume > 0.8) audio.volume = 0
+				else audio.volume += 0.2
 			}
 		}
 
