optimize volume adjustment #14

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		}, false)
 
 		audio.addEventListener('volumechange', () => {
-			postMessage('event', {name: audio.muted ? 'mute' : 'unmute'})
+			postMessage('event', {name: 'volume', data: {muted: audio.muted, value: audio.volume}})
 		})
 
 		audio.addEventListener('loadstart', () => {
@@ -78,17 +78,9 @@
 			else if (command === 'unmute') {
 				if (audio.muted) audio.muted = false
 			}
-			else if (command === 'volume_up') {
-				audio.volume += 0.2
-				audio.volume = Math.min(1, audio.volume)
-			}
-			else if (command === 'volume_down') {
-				audio.volume -= 0.2
-				audio.volume = Math.max(0, audio.volume)
-			}
-			else if (command === 'volume_change_repeat') {
-				if(audio.volume > 0.8) audio.volume = 0
-				else audio.volume += 0.2
+			else if (command === 'volumeChange') {
+				if (audio.muted) audio.muted = false
+				audio.volume + 0.2 > 1 ? audio.volume = 0 : audio.volume += 0.2
 			}
 		}
 
