--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html>
 	<script>
 		const audio = new Audio()
-		const Lyric = () => {
-			const lyric = {}
+		const Lyric = lrcs => {
+			const parsed = {}
 			const parse = lrc => lrc.trim().split('\n').filter(item => item).forEach(line => {
-				let point = line.slice(1, line.indexOf(']')).split(':')
-				let text = line.slice(line.indexOf(']') + 1).trim()
-				if (isNaN(point[0])) return
-				point = (parseInt(point[0]) * 60 + parseFloat(point[1])).toFixed(2)
-				if (!(point in lyric)) lyric[point] = []
-				lyric[point].push(text)
+				let points = line.match(/\[\d+:\d+\.*\d*\]/g) || []		
+				let text = line.replace(/\[.*:.*\]/g, '').trim()
+				points.map(point => point.slice(1, point.length - 1).split(':').reduce((before, current) => before * 60 + parseFloat(current), 0).toFixed(2))
+				.forEach(point => {
+					if (!(point in parsed)) parsed[point] = []
+					parsed[point].push(text)
+				}) 
 			})
-			song.lyric.filter(lrc => lrc).forEach(parse)
-			const timeline = Object.keys(lyric).sort((x, y) => parseFloat(x) - parseFloat(y))
+			lrcs.filter(lrc => lrc).forEach(parse)
+			const timeline = Object.keys(parsed).sort((x, y) => parseFloat(x) - parseFloat(y))
 			let cursor = 0
 			return second => {
 				if (second > timeline[cursor]) {
 					cursor += 1
-					return lyric[timeline[cursor - 1]].join('  ')
+					return parsed[timeline[cursor - 1]].join('  ')
 				}
 			}
 		}
@@ -64,7 +65,7 @@
 				audio.src = data.url
 				if (play) audio.play()
 				song = data
-				lyric = Lyric()
+				lyric = Lyric(data.lyric)
 			}
 			else if (command === 'play') {
 				if (audio.paused) audio.play()
