--- a/index.html
+++ b/index.html
@@ -11,24 +11,16 @@
 		const audio = new Audio()
 		const Lyric = lrcs => {
 			const parsed = {}
+			const secondify = point => point.slice(1, point.length - 1).split(':').reduce((before, current) => before * 60 + parseFloat(current), 0).toFixed(2)
 			const parse = lrc => lrc.trim().split('\n').filter(item => item).forEach(line => {
 				let points = line.match(/\[\d+:\d+\.*\d*\]/g) || []
 				let text = line.replace(/\[.*:.*\]/g, '').trim()
-				points.map(point => point.slice(1, point.length - 1).split(':').reduce((before, current) => before * 60 + parseFloat(current), 0).toFixed(2))
-				.forEach(point => {
-					if (!(point in parsed)) parsed[point] = []
-					parsed[point].push(text)
-				})
+				points.forEach(point => point in parsed ? parsed[point].push(text) : parsed[point] = [text])
 			})
 			lrcs.filter(lrc => lrc).forEach(parse)
-			const timeline = Object.keys(parsed).sort((x, y) => parseFloat(x) - parseFloat(y))
+			const timeline = Object.entries(parsed).map(entry => [secondify(entry[0]), entry[1]]).sort((x, y) => x[0] - y[0])
 			let cursor = 0
-			return second => {
-				if (second > timeline[cursor]) {
-					cursor += 1
-					return parsed[timeline[cursor - 1]].join('  ')
-				}
-			}
+			return timeline.length ? second => second > timeline[cursor][0] ? timeline[cursor ++][1].join('  ') : null : () => null
 		}
 
 		let song = null
