--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="referrer" content="never">
+    <meta name="referrer" content="no-referrer">
 	<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'unsafe-inline'; connect-src *; media-src * vscode-resource:">
 	<base>
 </head>
@@ -11,11 +13,13 @@
 		const audio = new Audio()
 		const Lyric = lrcs => {
 			const parsed = {}
-			const secondify = point => point.slice(1, point.length - 1).split(':').reduce((before, current) => before * 60 + parseFloat(current), 0).toFixed(2)
+			const secondify = point => point.split(':').reduce((before, current) => before * 60 + (parseFloat(current) || 0), 0).toFixed(2)
 			const parse = lrc => lrc.trim().split('\n').filter(item => item).forEach(line => {
 				let points = line.match(/\[\d+:\d+\.*\d*\]/g) || []
 				let text = line.replace(/\[.*:.*\]/g, '').trim()
-				points.forEach(point => point in parsed ? parsed[point].push(text) : parsed[point] = [text])
+				points
+				.map(point => point.slice(1, point.length - 1).replace(/^0+|0+$/g, ''))
+				.forEach(point => point in parsed ? parsed[point].push(text) : parsed[point] = [text])
 			})
 			lrcs.filter(lrc => lrc).forEach(parse)
 			const timeline = Object.entries(parsed).map(entry => [secondify(entry[0]), entry[1]]).sort((x, y) => x[0] - y[0])
