--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
 		// const polling = () => connect().then(message => (receiveMessage(message), polling()))
 		// polling()
 
-		// const eventSource = new EventSource('http://localhost:16363')
+		// const eventSource = new EventSource('http://localhost:16363/sender')
 		// eventSource.onmessage = event => receiveMessage(event.data)
 		window.onmessage = event => receiveMessage(event.data)
 
 		const native = acquireVsCodeApi()
 		const postMessage = (type, body) => native.postMessage({type, body})
 		// const postMessage = (type, body) => webSocket.send(JSON.stringify({type, body}))
+		// const postMessage = (type, body) => fetch('http://localhost:16363/receiver', {method: 'POST', body: JSON.stringify({type, body})})
 
 		const receiveMessage = message => {
 			message = typeof(message) === 'object' ? message : JSON.parse(message)
