--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			const secondify = point => point.split(':').reduce((before, current) => before * 60 + (parseFloat(current) || 0), 0).toFixed(2)
 			const parse = lrc => lrc.trim().split('\n').filter(item => item).forEach(line => {
 				let points = line.match(/\[\d+:\d+\.*\d*\]/g) || []
-				let text = line.replace(/\[.*:.*\]/g, '').trim()
+				let text = line.replace(/\[[^\]]*:[^\]]*\]/g, '').trim()
 				points
 				.map(point => point.slice(1, point.length - 1).replace(/^0+|0+$/g, ''))
 				.forEach(point => point in parsed ? parsed[point].push(text) : parsed[point] = [text])
