--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			const parsed = {}
 			const secondify = point => point.split(':').reduce((before, current) => before * 60 + (parseFloat(current) || 0), 0).toFixed(2)
 			const parse = lrc => lrc.trim().split('\n').filter(item => item).forEach(line => {
-				let points = line.match(/\[\d+:\d+\.*\d*\]/g) || []
-				let text = line.replace(/\[[^\]]*:[^\]]*\]/g, '').trim()
+				const points = line.match(/\[\d+:\d+\.*\d*\]/g) || []
+				const text = line.replace(/\[[^\]]*:[^\]]*\]/g, '').trim()
 				points
 				.map(point => point.slice(1, point.length - 1).replace(/^0+|0+$/g, ''))
 				.forEach(point => point in parsed ? parsed[point].push(text) : parsed[point] = [text])
@@ -27,8 +27,7 @@
 			return timeline.length ? second => (timeline[cursor] && second > timeline[cursor][0]) ? timeline[cursor ++][1].join('  ') : null : null
 		}
 
-		let song = null
-		let lyric = null
+		let song = null, lyric = null
 
 		audio.onplay = () => {
 			postMessage('event', {name: 'play'})
@@ -43,7 +42,7 @@
 		}
 
 		audio.ontimeupdate = () => {
-			let update = lyric ? lyric(audio.currentTime) : null
+			const update = lyric ? lyric(audio.currentTime) : null
 			if (update) postMessage('event', {name: 'lyric', data: update})
 		}
 
@@ -123,7 +122,7 @@
 				audio.volume + 0.2 > 1 ? audio.volume = 0 : audio.volume += 0.2
 			}
 			else if (command === 'trash') {
-				let data = {id: (song || {}).id, time: parseInt((audio || {}).currentTime)}
+				const data = {id: (song || {}).id, time: parseInt((audio || {}).currentTime)}
 				postMessage('event', {name: 'trash', data})
 			}
 		}
@@ -133,8 +132,7 @@
 		// 	.then(response => response.blob())
 		// 	.then(blob => {
 		// 		if (url != audio.src) return
-		// 		let src = window.URL.createObjectURL(blob)
-		// 		let currentTime = audio.currentTime
+		// 		const src = window.URL.createObjectURL(blob), {currentTime} = audio
 		// 		audio.src = src
 		// 		audio.currentTime = currentTime
 		// 		audio.play()
