wrap mediasession with try catch

--- a/index.html
+++ b/index.html
@@ -29,6 +29,35 @@
 
 		let song = null, lyric = null, mpris = window.navigator.userAgent.includes('Linux')
 
+		const mediaSessionHelper = new Proxy({
+			setMetadata: song => {
+				navigator.mediaSession.metadata = new MediaMetadata({
+					title: song.name,
+					artist: song.artists.map(artist => artist.name).join(' / '),
+					album: song.album.name,
+					artwork: [{
+						src: song.cover + '?param=200y200',
+						sizes: '200x200',
+						type: 'image/jpeg'
+					}]
+				})
+				navigator.mediaSession.setActionHandler('previoustrack', song.source.type === 'radio' ? null : () => postMessage('command', { action: 'previous' }))
+			},
+			enableAction: () => {
+				navigator.mediaSession.setActionHandler('nexttrack', () => postMessage('command', { action: 'next' }))
+			},
+			disableAction: () => {
+				navigator.mediaSession.setActionHandler('play', null)
+				navigator.mediaSession.setActionHandler('pause', null)
+			}
+		}, {
+			get: (target, property) => (...payload) => {
+				try {
+					target[property](...payload)
+				} catch (e) { console.warn(e) }
+			}
+		})
+
 		audio.onplay = () => {
 			postMessage('event', {name: 'play'})
 		}
@@ -52,15 +81,7 @@
 
 		audio.onloadedmetadata = () => {
 			song.duration = audio.duration
-			if ('mediaSession' in navigator && !mpris) {
-				navigator.mediaSession.metadata = new MediaMetadata({
-					title: song.name,
-					artist: song.artists.map(artist => artist.name).join(' / '),
-					album: song.album.name,
-					artwork: [{src: song.cover + '?param=200y200',  sizes: '200x200', type: 'image/jpeg'}]
-				})
-				navigator.mediaSession.setActionHandler('previoustrack', song.source.type === 'radio' ? null : () => postMessage('command', {action: 'previous'}))
-			}
+			if (!mpris) mediaSessionHelper.setMetadata(song)
 			postMessage('event', {name: 'load', data: song})
 		}
 
@@ -85,13 +106,9 @@
 		// const postMessage = (type, body) => fetch('http://localhost:16363/receiver', {method: 'POST', body: JSON.stringify({type, body})})
 
 		if (mpris) {
-			navigator.mediaSession.setActionHandler('play', null)
-			navigator.mediaSession.setActionHandler('pause', null)
-		}
-		else if ('mediaSession' in navigator) {
-			// navigator.mediaSession.setActionHandler('play', () => audio.play())
-			// navigator.mediaSession.setActionHandler('pause', () => audio.pause())
-			navigator.mediaSession.setActionHandler('nexttrack', () => postMessage('command', {action: 'next'}))
+			mediaSessionHelper.disableAction()
+		} else {
+			mediaSessionHelper.enableAction()
 		}
 
 		const receiveMessage = message => {
